@@ -1,5 +1,5 @@
 File;Type;Py Version;Size;Downloads
-`ProDy-0.6.1.tar.gz <http://pypi.python.org/packages/source/P/ProDy/ProDy-0.6.1.tar.gz>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=75f897a79e9495a4e248790db24457be>`_);Source;;214KB;51
-`ProDy-0.6.1.win32-py2.6.exe <http://pypi.python.org/packages/2.6/P/ProDy/ProDy-0.6.1.win32-py2.6.exe>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=99d927ee3a69c85093f6132a67159aa5>`_);MS Windows installer;2.6;370KB;13
-`ProDy-0.6.1.win32-py2.7.exe <http://pypi.python.org/packages/2.7/P/ProDy/ProDy-0.6.1.win32-py2.7.exe>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=1313999d33da10366cc521cd025b20a5>`_);MS Windows installer;2.7;370KB;11
+`ProDy-0.6.1.tar.gz <http://pypi.python.org/packages/source/P/ProDy/ProDy-0.6.1.tar.gz>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=75f897a79e9495a4e248790db24457be>`_);Source;;214KB;56
+`ProDy-0.6.1.win32-py2.6.exe <http://pypi.python.org/packages/2.6/P/ProDy/ProDy-0.6.1.win32-py2.6.exe>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=99d927ee3a69c85093f6132a67159aa5>`_);MS Windows installer;2.6;370KB;14
+`ProDy-0.6.1.win32-py2.7.exe <http://pypi.python.org/packages/2.7/P/ProDy/ProDy-0.6.1.win32-py2.7.exe>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=1313999d33da10366cc521cd025b20a5>`_);MS Windows installer;2.7;370KB;12
 `ProDy-0.6.1.zip <http://pypi.python.org/packages/source/P/ProDy/ProDy-0.6.1.zip>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=a4f0b40d0ba775d6764426832f3e1b7d>`_);Source;;231KB;40
