@@ -22,7 +22,7 @@
     datasets and comparison with theoretically predicted conformational dynamics.
     It is designed and developed by 
     <a href="http://www.ccbb.pitt.edu/People/abakan/" target="_blank">Ahmet Bakan</a> 
-    in the <a href="http://www.ccbb.pitt.edu/Faculty/bahar/" target="_blank">Bahar lab</a> 
+    in <a href="http://www.ccbb.pitt.edu/Faculty/bahar/" target="_blank">Bahar lab</a> 
     at the <a href="http://www.pitt.edu" target="_blank">University of Pittsburgh</a>.
     See <a href="{{ pathto("getprody") }}">Getting ProDy</a> for downloads and 
     installation instructions. 
